verification with numbers are done

--- a/src/app/pages/event/event-list/event-list.page.html
+++ b/src/app/pages/event/event-list/event-list.page.html
@@ -3,7 +3,7 @@
         <ion-searchbar inputmode="text" animated placeholder="Search"></ion-searchbar>
     </ion-col>
     <ion-col>
-        <ion-button class="searchButton" fill="solid">Find Local Clubs</ion-button>
+        <!-- <ion-button class="searchButton" fill="solid">Find Local Clubs</ion-button> -->
     </ion-col>
 </ion-row>
 
