--- a/src/app/components/buttons/mobile-signup/mobile-signup.component.html
+++ b/src/app/components/buttons/mobile-signup/mobile-signup.component.html
@@ -1,5 +1,5 @@
 <div class="ion-padding singup-mobile">
     <ion-row class="ion-justify-content-center">
-        <ion-button class="signup-button-mobile" [style.--background]="color" (click)="callback()">{{text}}</ion-button>
+        <ion-button class="signup-button-mobile" [disabled]="disabled" [style.--background]="color" (click)="callback()">{{text}}</ion-button>
     </ion-row>
 </div>
