--- a/src/app/pages/event/event-page/event-page.page.html
+++ b/src/app/pages/event/event-page/event-page.page.html
@@ -68,12 +68,10 @@
                             </div>
                         </ion-col>
                         <ion-col size="4" offset="4">
-                            <ion-button *ngIf="!alreadySignedUp else alreadySignedUpButton" size="large"
-                                class="signUpButton" (click)="onSignup()" [disabled]="disabled">
+                            <ion-button *ngIf="!alreadySignedUp else alreadySignedUpButton" size="large" class="signUpButton" (click)="onSignup()" [disabled]="disabled">
                                 Sign up</ion-button>
                             <ng-template #alreadySignedUpButton>
-                                <ion-button size="large" class="verifyButton" [disabled]="alreadyVerified"
-                                    (click)="onVerifyClicked()">
+                                <ion-button size="large" class="verifyButton" [disabled]="alreadyVerified" (click)="onVerifyClicked()">
                                     {{this.isInstructorForEvent ? 'Verify users' : 'verify'}}
                                 </ion-button>
                             </ng-template>
@@ -84,8 +82,7 @@
                     <ion-col>
                         <ion-button style="width: 100%; height: 300px; ">MAPS</ion-button>
                         <ion-row class="ion-justify-content-center ion-margin">
-                            <h1>Address:
-                                {{event.locations[0]?.room.roomId ? event.locations[0].room.name : clubInfo.address}}
+                            <h1>Address: {{event.locations[0]?.room.roomId ? event.locations[0].room.name : clubInfo.address}}
                             </h1>
                         </ion-row>
                     </ion-col>
@@ -147,8 +144,6 @@
         </ion-card>
     </ion-content>
 
-    <app-mobile-signup-component [text]="getButtonText()"
-        [color]="(alreadySignedUp || isInstructorForEvent) ? '#43B3C3': '#70ad47'"
-        [callback]="alreadySignedUp ?  onVerifyClicked : onSignup">
+    <app-mobile-signup-component [text]="getButtonText()" [color]="(alreadySignedUp || isInstructorForEvent) ? '#43B3C3': '#70ad47'" [callback]="alreadySignedUp ?  onVerifyClicked : onSignup">
     </app-mobile-signup-component>
 </ng-template>
