--- a/src/app/pages/event/myevents/myevents.page.html
+++ b/src/app/pages/event/myevents/myevents.page.html
@@ -14,11 +14,11 @@
       <ion-card-content> 
         <div style="display: flex;">
           <div style="display: flex;">
-            <h1 style="padding-right:10px; font-weight: bold;">From:</h1>
+            <h1 style="padding-right:10px; font-size:large; font-weight: bold;">From:</h1>
             <h2>{{formatDate(participation.event.startTime)}}</h2>
           </div>
           <div style="display: flex; padding-left:20px;">
-            <h1 style="padding-right:10px; font-weight: bold;">To:</h1>
+            <h1 style="padding-right:10px; font-size:large; font-weight: bold;">To:</h1>
             <h2>{{formatDate(participation.event.endTime)}}</h2>
           </div>
         </div>
@@ -36,11 +36,11 @@
       <ion-card-content> 
         <div style="display: flex;">
           <div style="display: flex;">
-            <h1 style="padding-right:10px; font-weight: bold;">From:</h1>
+            <h1 style="padding-right:10px; font-size:large; font-weight: bold;">From:</h1>
             <h2>{{formatDate(event.startTime)}}</h2>
           </div>
           <div style="display: flex; padding-left:20px;">
-            <h1 style="padding-right:10px; font-weight: bold;">To:</h1>
+            <h1 style="padding-right:10px; font-size:large; font-weight: bold;">To:</h1>
             <h2>{{formatDate(event.endTime)}}</h2>
           </div>
         </div>
@@ -64,11 +64,11 @@
     <ion-card-content> 
       <div style="display: flex;">
         <div style="display: flex;">
-          <h1 style="padding-right:10px; font-weight: bold;">From:</h1>
+          <h1 style="padding-right:10px; font-size:large; font-weight: bold;">From:</h1>
           <h2>{{formatDate(participation.event.startTime)}}</h2>
         </div>
         <div style="display: flex; padding-left:20px;">
-          <h1 style="padding-right:10px; font-weight: bold;">To:</h1>
+          <h1 style="padding-right:10px; font-size:large; font-weight: bold;">To:</h1>
           <h2>{{formatDate(participation.event.endTime)}}</h2>
         </div>
       </div>
