--- a/src/app/pages/event/myevents/myevents.page.html
+++ b/src/app/pages/event/myevents/myevents.page.html
@@ -1,7 +1,78 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>myevents</ion-title>
-  </ion-toolbar>
-</ion-header>
+<div *ngIf="showUpcomingEvents()">
+  <ion-header>
+    <ion-toolbar>
+      <ion-title>My upcoming events</ion-title>
+    </ion-toolbar>
+  </ion-header>
+  <div *ngIf="upcomingMemberEvents.length > 0">
+    <ion-label>You are participating in</ion-label>
+    <ion-list>
+      <ion-card *ngFor="let participation of upcomingMemberEvents">
+        <ion-card-header>
+          <ion-card-title>{{participation.event.name.toUpperCase()}}</ion-card-title>
+      </ion-card-header>
+      <ion-card-content> 
+        <div style="display: flex;">
+          <div style="display: flex;">
+            <h1 style="padding-right:10px; font-size:large; font-weight: bold;">From:</h1>
+            <h2>{{formatDate(participation.event.startTime)}}</h2>
+          </div>
+          <div style="display: flex; padding-left:20px;">
+            <h1 style="padding-right:10px; font-size:large; font-weight: bold;">To:</h1>
+            <h2>{{formatDate(participation.event.endTime)}}</h2>
+          </div>
+        </div>
+      </ion-card-content>
+      </ion-card>
+    </ion-list>
+  </div>
+  <div *ngIf="upcomingInstructorEvents.length > 0">
+    <ion-label>You are instructor for</ion-label>
+    <ion-list>
+      <ion-card *ngFor="let event of upcomingInstructorEvents">
+        <ion-card-header>
+          <ion-card-title>{{event.name.toUpperCase()}}</ion-card-title>
+      </ion-card-header>
+      <ion-card-content> 
+        <div style="display: flex;">
+          <div style="display: flex;">
+            <h1 style="padding-right:10px; font-size:large; font-weight: bold;">From:</h1>
+            <h2>{{formatDate(event.startTime)}}</h2>
+          </div>
+          <div style="display: flex; padding-left:20px;">
+            <h1 style="padding-right:10px; font-size:large; font-weight: bold;">To:</h1>
+            <h2>{{formatDate(event.endTime)}}</h2>
+          </div>
+        </div>
+      </ion-card-content>
+      </ion-card>
+    </ion-list>
+  </div>
+</div>
 
-<ion-content> </ion-content>
+<div *ngIf="showPastEvents()">
+  <ion-header>
+    <ion-toolbar>
+      <ion-title>My past events</ion-title>
+    </ion-toolbar>
+  </ion-header>
+  <ion-list>
+    <ion-card [routerLink]="['/event-page/', participation.eventId]" button="true" *ngFor="let participation of pastMemberEvents">
+      <ion-card-header>
+        <ion-card-title>{{participation.event.name.toUpperCase()}}</ion-card-title>
+    </ion-card-header>
+    <ion-card-content> 
+      <div style="display: flex;">
+        <div style="display: flex;">
+          <h1 style="padding-right:10px; font-size:large; font-weight: bold;">From:</h1>
+          <h2>{{formatDate(participation.event.startTime)}}</h2>
+        </div>
+        <div style="display: flex; padding-left:20px;">
+          <h1 style="padding-right:10px; font-size:large; font-weight: bold;">To:</h1>
+          <h2>{{formatDate(participation.event.endTime)}}</h2>
+        </div>
+      </div>
+    </ion-card-content>
+    </ion-card>
+  </ion-list>
+</div>
