--- a/src/app/pages/event/event-list/event-list.page.html
+++ b/src/app/pages/event/event-list/event-list.page.html
@@ -1,25 +1,25 @@
 <ion-row class="ion-justify-content-around ion-margin">
-  <ion-col size="7">
-    <ion-searchbar inputmode="text" animated placeholder="Search"></ion-searchbar>
-  </ion-col>
-  <ion-col>
-    <ion-button class="searchButton" fill="solid">Find Local Clubs</ion-button>
-  </ion-col>
+    <ion-col size="12">
+        <ion-searchbar inputmode="text" animated placeholder="Search"></ion-searchbar>
+    </ion-col>
+    <ion-col>
+        <!-- <ion-button class="searchButton" fill="solid">Find Local Clubs</ion-button> -->
+    </ion-col>
 </ion-row>
 
 <ion-content>
-  <ion-list *ngFor="let event of ((events$) | async)?.data.eventsConfirmed ">
-    <ion-card>
-      <ion-card-header>
-        <ion-card-title>{{event.name.toUpperCase()}}</ion-card-title>
-        <ion-card-subtitle>
-          <ion-row class="ion-justify-content-between">
-            <ion-text style="margin-top: 1rem"> Event Price </ion-text>
-            <ion-button class="goToClubButton" [routerLink]="route(event.eventId)">Go to event</ion-button>
-          </ion-row>
-        </ion-card-subtitle>
-      </ion-card-header>
-      <ion-card-content> {{event.description}} </ion-card-content>
-    </ion-card>
-  </ion-list>
+    <ion-list *ngFor="let event of ((events$) | async)?.data.eventsConfirmed ">
+        <ion-card>
+            <ion-card-header>
+                <ion-card-title>{{event.name.toUpperCase()}}</ion-card-title>
+                <ion-card-subtitle>
+                    <ion-row class="ion-justify-content-between">
+                        <ion-text style="margin-top: 1rem"> Event Price </ion-text>
+                        <ion-button class="goToClubButton" [routerLink]="route(event.eventId)">Go to event</ion-button>
+                    </ion-row>
+                </ion-card-subtitle>
+            </ion-card-header>
+            <ion-card-content> {{event.description}} </ion-card-content>
+        </ion-card>
+    </ion-list>
 </ion-content>
