--- a/src/app/pages/dashboard/dashboard/dashboard.page.html
+++ b/src/app/pages/dashboard/dashboard/dashboard.page.html
@@ -1,5 +1,9 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>Dashboard</ion-title>
-  </ion-toolbar>
+    <ion-toolbar>
+        <ion-title>Dashboard</ion-title>
+    </ion-toolbar>
 </ion-header>
+<ion-content>
+    <ion-button (click)="read()">Read</ion-button>
+    <ion-button (click)="write()">Write</ion-button>
+</ion-content>
