--- a/src/app/pages/modals/verify-modal-user/verify-modal-user.page.html
+++ b/src/app/pages/modals/verify-modal-user/verify-modal-user.page.html
@@ -16,6 +16,11 @@
                         </h1>
                     </ion-text>
                 </ion-row>
+                <ion-row class="ion-justify-content-center">
+                    <ion-text>
+                        <ion-button color="primary" (click)="startNearbyBroadcast()">Verify </ion-button>
+                    </ion-text>
+                </ion-row>
             </ion-col>
         </ion-row>
     </ion-grid>
