--- a/src/app/pages/club/show-club/show-club.page.html
+++ b/src/app/pages/club/show-club/show-club.page.html
@@ -170,5 +170,5 @@
             </ion-col>
         </ion-grid>
     </ion-content>
-    <app-mobile-signup-component [text]=" isNotMember ? 'Sign up' : 'Already signed up'" [disabled]="!isNotMember" [callback]="showModal "></app-mobile-signup-component>
+    <app-mobile-signup-component [text]=" !currentSubscription ? 'Sign up' : 'Already signed up'" [disabled]="currentSubscription" [callback]="showModal "></app-mobile-signup-component>
 </ng-template>
