--- a/src/app/pages/event/event-page/event-page.page.html
+++ b/src/app/pages/event/event-page/event-page.page.html
@@ -72,7 +72,7 @@
                                 Sign up</ion-button>
                             <ng-template #alreadySignedUpButton>
                                 <ion-button size="large" class="verifyButton" [disabled]="alreadyVerified" (click)="onVerifyClicked()">
-                                    {{this.isInstructorForEvent ? 'Verify users' : 'verify'}}
+                                    {{this.isInstructorForEvent ? 'Verify users' : this.alreadyVerified ? 'Already Verified' : 'verify'}}
                                 </ion-button>
                             </ng-template>
                         </ion-col>
