--- a/src/app/pages/club/club-manage/club-manage.page.scss
+++ b/src/app/pages/club/club-manage/club-manage.page.scss
@@ -35,7 +35,10 @@ ion-button {
 }
 
 .background {
-  --background: url(../../../../assets/img/start.jpg) 0 0/100% 100% no-repeat;
+  --color: #fff;
+  --background: none;
+  background: url(../../../../assets/img/start.jpg) 0 0/100% 100% no-repeat;
+  background-size: cover;
 }
 
 ion-segment {
@@ -45,5 +48,5 @@ ion-segment {
 .item-border {
   border: 1px solid black;
   border-radius: 15px;
-  margin-right:15px;
+  margin-right: 15px;
 }
