--- a/src/app/pages/auth/login/login.page.scss
+++ b/src/app/pages/auth/login/login.page.scss
@@ -6,8 +6,11 @@ ion-row {
   justify-content: center;
 }
 
-ion-content.background {
-  --background: url(../../../../assets/img/start.jpg) 0 0/100% 100% no-repeat;
+ion-content {
+  --color: #fff;
+  --background: none;
+  background: url(../../../../assets/img/start.jpg) 0 0/100% 100% no-repeat;
+  background-size: cover;
 }
 
 ion-col {
