--- a/src/app/pages/auth/signup/signup.page.scss
+++ b/src/app/pages/auth/signup/signup.page.scss
@@ -5,8 +5,11 @@
   justify-content: center;
 }
 
-ion-content.background {
-  --background: url(../../../../assets/img/start.jpg) 0 0/100% 100% no-repeat;
+ion-content {
+  --color: #fff;
+  --background: none;
+  background: url(../../../../assets/img/start.jpg) 0 0/100% 100% no-repeat;
+  background-size: cover;
 }
 
 ion-item {
