--- a/src/app/pages/auth/start/start.page.scss
+++ b/src/app/pages/auth/start/start.page.scss
@@ -1,5 +1,8 @@
-ion-content.background {
-  --background: url(../../../../assets/img/start.jpg) 0 0/100% 100% no-repeat;
+ion-content {
+  --color: #fff;
+  --background: none;
+  background: url(../../../../assets/img/start.jpg) 0 0/100% 100% no-repeat;
+  background-size: cover;
 }
 
 ion-toolbar {
