More page flicker

--- a/src/app/pages/club/club-create/club-create.page.scss
+++ b/src/app/pages/club/club-create/club-create.page.scss
@@ -6,8 +6,11 @@
   justify-content: center;
 }
 
-ion-content.background {
-  --background: url(../../../../assets/img/start.jpg) 0 0/100% 100% no-repeat;
+.background {
+  --color: #fff;
+  --background: none;
+  background: url(../../../../assets/img/start.jpg) 0 0/100% 100% no-repeat;
+  background-size: cover;
 }
 
 .signup ion-col {
