--- a/src/app/pages/event/create-event/create-event.page.scss
+++ b/src/app/pages/event/create-event/create-event.page.scss
@@ -4,8 +4,11 @@
   background: whitesmoke;
 }
 
-ion-content.background {
-  --background: url(../../../../assets/img/start.jpg) 0 0/100% 100% no-repeat;
+.background {
+  --color: #fff;
+  --background: none;
+  background: url(../../../../assets/img/start.jpg) 0 0/100% 100% no-repeat;
+  background-size: cover;
 }
 
 .centered ion-grid {
