--- a/src/app/components/club-manage/club-manage-members/club-manage-members.component.html
+++ b/src/app/components/club-manage/club-manage-members/club-manage-members.component.html
@@ -4,7 +4,7 @@
       <ion-col class="center">
         <ion-list>
           <ion-list-header>
-            <ion-title>Club Admin</ion-title>
+            <ion-label class="list-titles">Club Admin</ion-label>
           </ion-list-header>
           <ion-card>
             <ion-avatar>
@@ -23,7 +23,7 @@
         <ion-col class="center">
           <ion-list>
             <ion-list-header>
-              <ion-title>Club members</ion-title>
+              <ion-label class="list-titles">Club members</ion-label>
             </ion-list-header>
             <ion-searchbar [(ngModel)]="searchQuery" (ngModelChange)="searchBarChange($event)" inputmode="text" animated placeholder="Search"></ion-searchbar>
             <div *ngFor="let item of filteredMembers">
@@ -35,18 +35,18 @@
                 </ion-avatar>
                 <ion-grid>
                   <ion-row>
-                    <ion-col size="3">
+                    <ion-col>
                       <ion-card-header>
                         <ion-card-title>{{ item.user.name }}</ion-card-title>
                       </ion-card-header>
                     </ion-col>
-                    <ion-col size="3">
+                    <ion-col>
                       <ion-card-header>
                         <ion-card-title *ngIf="isUserMember(item)">Member</ion-card-title>
                         <ion-card-title *ngIf="isUserInstructor(item)">Instructor</ion-card-title>
                       </ion-card-header>
                     </ion-col>
-                    <ion-col class="end">
+                    <ion-col>
                       <ion-card-content>
                         <ion-toolbar>
                           <ion-buttons>
