--- a/src/app/components/club-manage/club-manage-members/club-manage-members.component.scss
+++ b/src/app/components/club-manage/club-manage-members/club-manage-members.component.scss
@@ -4,6 +4,11 @@ ion-list {
   max-width: 600px;
 }
 
+ion-list-header {
+  width: auto;
+  text-align: center;
+}
+
 .container {
   display: flex;
   justify-content: center;
@@ -13,7 +18,7 @@ ion-card {
   --background: #3880ff;
   display: flex;
   align-items: center;
-  height: 80px;
+  min-height: 80px;
   border-radius: 20px;
 }
 
@@ -25,8 +30,8 @@ ion-toolbar {
   --background: transparent;
 }
 
-ion-label {
-  color: white;
+.list-titles {
+  --color: black !important;
 }
 
 ion-icon {
