Added labels to show, if filter has no results

--- a/src/app/pages/event/event-list/event-list.page.html
+++ b/src/app/pages/event/event-list/event-list.page.html
@@ -8,6 +8,7 @@
 </ion-row>
 
 <ion-content>
+    <ion-header style="padding-left:30px;" *ngIf="filteredEvents.length == 0">No events matching the searchquery</ion-header>
     <ion-list *ngFor="let event of filteredEvents">
         <ion-card>
             <ion-card-header>
