--- a/src/app/pages/club/club-list/club-list.page.html
+++ b/src/app/pages/club/club-list/club-list.page.html
@@ -2,13 +2,10 @@
     <ion-col size="12">
         <ion-searchbar [(ngModel)]="searchQuery" (ngModelChange)="onSearch($event)" inputmode="text" animated placeholder="Search"></ion-searchbar>
     </ion-col>
-    <ion-col>
-        <!-- <ion-button class="searchButton" fill="solid" (click)="findLocalClubs()">Find Local Clubs</ion-button> -->
-    </ion-col>
 </ion-row>
 
 <ion-content>
-    <ion-header style="padding-left:30px;" *ngIf="filteredClubs.length == 0">No clubs matching the searchquery</ion-header>
+    <ion-header style="padding-left:30px;" *ngIf="filteredClubs.length == 0 && clubs.length > 0">No clubs matching the searchquery</ion-header>
     <ion-list *ngFor="let club of filteredClubs">
         <ion-card>
             <ion-card-header>
