--- a/src/app/components/club-manage/club-manage-subcriptions/club-manage-subcriptions.component.scss
+++ b/src/app/components/club-manage/club-manage-subcriptions/club-manage-subcriptions.component.scss
@@ -15,6 +15,10 @@ ion-list {
   border-radius: 15px;
 }
 
+ion-textarea {
+  width: min-content;
+}
+
 .rcorners {
   border-radius: 25px;
   background: whitesmoke;
@@ -42,12 +46,14 @@ ion-card-subtitle {
   --color: white;
 }
 
-ion-item-divider {
-  margin-top: 50px;
+ion-select::part(icon) {
+  display: none !important;
 }
 
 .selecter {
   background-color: white;
+  display: flex;
+  align-items: center;
 }
 
 #submit {
@@ -85,4 +91,10 @@ ion-row {
   top: 1.5rem;
   right: 1rem;
   z-index: 1;
+}
+
+ion-icon {
+  position: absolute;
+  right:30px;
+  padding-bottom:4px;
 }
