--- a/src/app/pages/club/myclubs/myclubs.page.scss
+++ b/src/app/pages/club/myclubs/myclubs.page.scss
@@ -1,3 +1,13 @@
 .auto-width {
     width: auto;
+    font-weight:bold;
+    font-size: 20px;
+}
+
+.center-text {
+    text-align: center;
+}
+
+ion-list {
+    width: 100%
 }
