--- a/src/app/pages/event/myevents/myevents.page.html
+++ b/src/app/pages/event/myevents/myevents.page.html
@@ -1,12 +1,13 @@
+<ion-content>
 <ion-header *ngIf="(events$ | async)?.myEventParticipations.length == 0 && (events$ | async)?.myInstructorEvents.length == 0">
-    <ion-toolbar>
+    <ion-toolbar class="center-text">
         <ion-title class="auto-width">You are not connected to any events yet!</ion-title>
     </ion-toolbar>
 </ion-header>
 <ion-content>
     <div *ngIf="showUpcomingEvents()">
         <ion-header>
-            <ion-toolbar>
+            <ion-toolbar class="center-text">
                 <ion-title class="auto-width">My upcoming events</ion-title>
             </ion-toolbar>
         </ion-header>
@@ -59,10 +60,9 @@
             </ion-list>
         </div>
     </div>
-
     <div *ngIf="showPastEvents()">
         <ion-header>
-            <ion-toolbar>
+            <ion-toolbar class="center-text">
                 <ion-title class="auto-width">My past events</ion-title>
             </ion-toolbar>
         </ion-header>
